// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Top should render close icon when open 1`] = `
<div
  className="Top"
>
  <UnstyledLink
    className="Menu"
    onClick={[MockFunction]}
  >
    <Close
      size={24}
    />
  </UnstyledLink>
  <Link
    className="MobileLogo"
    replace={false}
    to="/landing"
  >
    <Logo
      type="halfWhite"
    />
  </Link>
  <div
    className="MobileAccountDropdownWrapper"
  >
    <Connect(AccountDropdown) />
  </div>
</div>
`;

exports[`Top should render correctly on desktop 1`] = `
<div
  className="Top"
>
  <Link
    className="Logo"
    replace={false}
    to="/landing"
  >
    <Logo
      type="halfWhite"
    />
  </Link>
  <div
    className="RightSideWrapper"
  >
    <Connect(AccessControl)
      condition={[Function]}
    >
      <Connect(NotificationCenter) />
    </Connect(AccessControl)>
    <Connect(AccessControl)
      condition={[Function]}
    >
      <HelpOutline
        className="SupportIcon"
        onClick={[Function]}
        size={22}
      />
      }
    </Connect(AccessControl)>
    <Connect(AccountDropdown) />
  </div>
</div>
`;

exports[`Top should render correctly on mobile 1`] = `
<div
  className="Top"
>
  <UnstyledLink
    className="Menu"
    onClick={[MockFunction]}
  >
    <Menu
      size={24}
    />
  </UnstyledLink>
  <Link
    className="MobileLogo"
    replace={false}
    to="/landing"
  >
    <Logo
      type="halfWhite"
    />
  </Link>
  <div
    className="MobileAccountDropdownWrapper"
  >
    <Connect(AccountDropdown) />
  </div>
</div>
`;
